--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,128 @@
-@import url(css/normalize.min.css);
+@import url(normalize.min.css);
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
+
+* {
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 400; /* regular */
+    font-style: normal;
+    color: #f7f3ea;
+}
 
 .promo-wraper
 {
     background-color: #86509C;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .services
 {
     background-color: #17c1a4;
+}
+
+
+/* Logo: 117x37, left: 210, top: 57 */
+
+/* container 1270 right, 210 left */
+
+.container
+{
+    max-width: 1060px;
+    margin: 0 auto;
+}
+
+header .container 
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+main {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+header
+{
+    padding-top: 37px;
+}
+
+/* 60 px from top, 92 down bound */
+.nav ul
+{
+    display: flex;
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    align-items: center;
+}
+/*43->42->41->43*/
+.nav li
+{
+    margin-left: 11px;
+}
+.nav li:first-of-type
+{
+    margin-left: 0px;
+}
+
+.nav li a
+{
+    font-size: 16px;
+    text-decoration: none;
+    padding: 8px 16px;
+    border-radius: 5px;
+    text-transform: uppercase;
+}
+/*16x8 | 43-(16*2) = 11 dist between butt*/
+.nav a:hover
+{
+    background-color: #643A79;
+}
+
+.main-text
+{
+    text-align: center;
+    font-weight: 700;
+    margin: 0px;
+    /* margin-top: 239px; */
+}
+
+.btn-container
+{
+    text-align: center;
+}
+.btn 
+{
+    display: inline-block;
+    padding: 23px 82px; /* coorected paddings */
+    border-radius: 5px;
+    border: none;
+    cursor: pointer; /* On event guidance show different cursor*/
+    box-shadow: -1px 4px 0px -1px rgba(0,0,0,0.5);
+
+    text-align: center;
+
+    /* box-sizing: border-box; */
+    /* height: 66px;
+    width: 293px; */
+
+    background-color: #eb7d4b;
+    /*color deffault from universal selector*/
+    font-size: 18px;
+    font-weight: 600;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.work-part .container 
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 62px;
 }
