--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ header
     border-radius: 5px;
     border: none;
     cursor: pointer; /* On event guidance show different cursor*/
-    box-shadow: -1px 4px 0px -1px rgba(0,0,0,0.5);
+    box-shadow: -1px 4px 0px -1px rgba(0,0,0,0.2);
 
     text-align: center;
 
@@ -172,6 +172,7 @@ header
 .services-list {
     display: flex;
     justify-content: space-between;
+    gap: 30px;
 }
 
 .service-item {
