--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,11 @@
 @import url(normalize.min.css);
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
 
-* {
+body {
     font-family: "Titillium Web", sans-serif;
     font-weight: 400; /* regular */
     font-style: normal;
-    color: #f7f3ea;
+    /* color: #f7f3ea; */
     letter-spacing: 2px;
 }
 
@@ -16,10 +16,8 @@
     flex-direction: column;
     /* min-height: 100vh; */
     padding-bottom: 145px;
+    color: #f7f3ea;
 }
-
-
-
 
 /* Logo: 117x37, left: 210, top: 57 */
 
@@ -38,12 +36,6 @@ header .container
     align-items: center;
 }
 
-main {
-    /* flex-grow: 1; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 header
 {
@@ -76,6 +68,7 @@ header
     padding: 8px 16px;
     border-radius: 5px;
     text-transform: uppercase;
+    color: #f7f3ea;
 }
 /*16x8 | 43-(16*2) = 11 dist between butt*/
 .nav a:hover
@@ -91,10 +84,6 @@ header
     /* margin-top: 239px; */
 }
 
-.btn-container
-{
-    text-align: center;
-}
 .btn 
 {
     display: inline-block;
@@ -111,7 +100,7 @@ header
     width: 293px; */
 
     background-color: #eb7d4b;
-    /*color deffault from universal selector*/
+    color: #f7f3ea;
     font-size: 18px;
     font-weight: 600;
     text-transform: uppercase;
@@ -138,6 +127,7 @@ header
     background-color: #17c1a4;
     padding-top: 115px;
     padding-bottom: 125px;
+    color: white;
 }
 
 .second-part-main-subtitle
@@ -145,7 +135,6 @@ header
     /* max-width: 600px; */
     text-align: center;
     margin: 0 auto 80px;
-    color: #ffffff;
     line-height: 1.5;
     font-size: 18px;
     font-weight: 400;
@@ -180,7 +169,6 @@ header
     flex-direction: column;
     align-items: center;
     text-align: center;
-    color: white;
     /* flex-basis: 25%; */
 }
 
@@ -198,7 +186,6 @@ header
     font-weight: 700;
     margin-top: 50px; /* Відстань від блоку з іконкою до заголовка */
     margin-bottom: 20px;
-    color: white;
 }
 
 .service-item__text p {
